# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/engine/: engine.py
brain_games/games/: all_games.py  brain_calc.py  brain_calc_logic.py  brain_even_logic.py  brain_gcd_logic.py  brain_prime_logic.py  brain_progression_logic.py  engine.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
