[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "5 games"
authors = ["Игорь Рудич <rudi4.clarinet@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = ["Topic :: Games/Entertainment :: Arcade"]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:calc"
brain-gcd = "brain_games.scripts.brain_gcd:gcd"
brain-progression = "brain_games.scripts.brain_progression:progression"
brain-prime = "brain_games.scripts.brain_prime:prime"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

repository = "https://github.com/Rudich1988/python-project-49"
